--- a/RabbitMQProgram/src/main/resources/application.properties
+++ b/RabbitMQProgram/src/main/resources/application.properties
@@ -7,10 +7,15 @@ spring.rabbitmq.password=spring.rabbitmq.password
 # Message Queue specific configs for directexchange
 direct.exchange.name=amq.direct
 direct.queue1.name=amqdirect.queue1
-direct.queue1.routing.key=amqdirect.queue1
 direct.queue2.name=amqdirect.queue2
-direct.queue2.routing.key=amqdirect.queue2
 direct.queue3.name=amqdirect.queue3
 direct.queue4.name=amqdirect.queue4
+direct.queue1.routing.key=amqdirect.queue1
+direct.queue2.routing.key=amqdirect.queue2
 direct.queue34.routing.key=amqdirect.queue34
 
+# Message Queue specific configs for directexchange
+fanout.exchange.name=amq.fanout
+fanout.queue1.name=amqfanout.queue1
+fanout.queue2.name=amqfanout.queue2
+fanout.queue3.name=amqfanout.queue3
