rabbitmq some code cleanup

--- a/RabbitMQProgram/src/main/resources/application.properties
+++ b/RabbitMQProgram/src/main/resources/application.properties
@@ -10,6 +10,10 @@ direct.queue1.name=amqdirect.queue1
 direct.queue2.name=amqdirect.queue2
 direct.queue3.name=amqdirect.queue3
 direct.queue4.name=amqdirect.queue4
+direct.queue1.binding.key=amqdirect.queue1
+direct.queue2.binding.key=amqdirect.queue2
+direct.queue3.binding.key=amqdirect.queue34
+direct.queue4.binding.key=amqdirect.queue34
 direct.queue1.routing.key=amqdirect.queue1
 direct.queue2.routing.key=amqdirect.queue2
 direct.queue34.routing.key=amqdirect.queue34
