topic exchange implementation

--- a/RabbitMQProgram/src/main/resources/application.properties
+++ b/RabbitMQProgram/src/main/resources/application.properties
@@ -14,12 +14,38 @@ direct.queue1.binding.key=amqdirect.queue1
 direct.queue2.binding.key=amqdirect.queue2
 direct.queue3.binding.key=amqdirect.queue34
 direct.queue4.binding.key=amqdirect.queue34
-direct.queue1.routing.key=amqdirect.queue1
-direct.queue2.routing.key=amqdirect.queue2
-direct.queue34.routing.key=amqdirect.queue34
+direct.msg1.routing.key=amqdirect.queue1
+direct.msg2.routing.key=amqdirect.queue2
+direct.msg34.routing.key=amqdirect.queue34
 
 # Message Queue specific configs for directexchange
 fanout.exchange.name=amq.fanout
 fanout.queue1.name=amqfanout.queue1
 fanout.queue2.name=amqfanout.queue2
 fanout.queue3.name=amqfanout.queue3
+
+# Message Queue specific configs for topicexchange
+topic.exchange.name=amq.topic
+topic.queue1.name=amqtopic.queue.eu
+topic.queue2.name=amqtopic.queue.in
+topic.queue3.name=amqtopic.queue.us
+topic.queue4.name=amqtopic.queue.headoffice
+topic.queue5.name=amqtopic.queue.store
+topic.queue6.name=amqtopic.queue.all
+topic.queue1.routing.pattern=msg.*.eu.*
+topic.queue2.routing.pattern=msg.*.in.*
+topic.queue3.routing.pattern=msg.*.us.*
+topic.queue4.routing.pattern=msg.#.headoffice
+topic.queue5.routing.pattern=msg.#.store
+topic.queue6.routing.pattern=msg.#
+topic.msg1.routing.key=msg.email.eu.store
+topic.msg2.routing.key=msg.phone.eu.headoffice
+topic.msg3.routing.key=msg.email.in.store
+topic.msg4.routing.key=msg.phone.in.headoffice
+topic.msg5.routing.key=msg.email.us.store
+topic.msg6.routing.key=msg.phone.us.headoffice
+topic.msg7.routing.key=msg.phone.in.store
+topic.msg8.routing.key=msg.email.in.headoffice
+
+
+
